--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,5 @@ key.json
 meta.json
 /results
 files/nix/home-manager/packages.nix
+files/nix/home-manager/program_list.nix
 files/nix/home-manager/flake.lock
