--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -1,7 +1,6 @@
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'laktak/extrakto'
 set -g @extrakto_fzf_tool "~/.local/share/fzf/bin/fzf"
@@ -87,4 +86,4 @@ set-option -g status-left-length 60
 set-option -g status-right-length 60
 
 set-option -g status-left "#[fg=black,bg=cyan,bold] #h:#[fg=black,bg=cyan,nobold]#S #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
-set-option -g status-right "#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #(~/.config/tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2 -a 1  -g 0) "
+set-option -g status-right "#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #(tmux-mem-cpu-load --interval 2 -a 1  -g 0) "
