--- a/files/hyprland/hyprland.conf
+++ b/files/hyprland/hyprland.conf
@@ -69,7 +69,7 @@ decoration {
         enabled = true
         size = 3
         passes = 1
-        
+
         vibrancy = 0.1696
     }
 
@@ -131,7 +131,7 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
+$mainMod = ALT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
@@ -139,7 +139,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod SUPER, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
