--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ meta.json
 files/nix/home-manager/packages.nix
 files/nix/home-manager/system_packages.nix
 files/nix/systems/darwin/system_packages.nix
+files/nix/flake.lock
 files/nix/systems/nixos/system_packages.nix
