--- a/files/recoll/recoll.conf
+++ b/files/recoll/recoll.conf
@@ -1,3 +1,3 @@
-topdirs = ~/Nextcloud/book ~/Nextcloud/orgnotes ~/Nextcloud/zotero
+topdirs = ~/Nextcloud/book ~/Nextcloud/orgnotes ~/Nextcloud/documents ~/Nextcloud/zotero
 recollhelperpath = /usr/local/bin
 noContentSuffixes+ = .bib
