--- a/packages.toml
+++ b/packages.toml
@@ -224,6 +224,7 @@ common = [
   { name = "hunspellDicts.en_US", method = "nix" },
   { name = "enchant", method = "nix-hm" },
   { name = "emacs-lsp-booster", method = "nix-hm" },
+  { name = "pandoc", method = "nix-hm" },
 ]
 
 [emacs-gui]
@@ -234,7 +235,10 @@ common = [
   { name = "mu", method = "nix-hm" },
   { name = "goimapnotify", method = "nix-hm" },
 ]
-darwin = [{ name = "terminal-notifier", method = "nix-hm" }]
+darwin = [
+  { name = "terminal-notifier", method = "nix-hm" },
+  { name = "pngpaste", method = "nix-hm" },
+]
 
 # repository management
 [ghq]
