--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -16,6 +16,6 @@ jobs:
     - name: Run install.sh
       run: |
         mkdir -p ${GITHUB_WORKSPACE}/results
-        echo "DEV_ENV=y\nGUI_ENV=y" > ${GITHUB_WORKSPACE}/results/env_settings
+        echo -e "DEV_ENV=y\nGUI_ENV=y" > ${GITHUB_WORKSPACE}/results/env_settings
         echo "GITHUB_ACTIONS=y" >> ${GITHUB_WORKSPACE}/files/zsh/zshenv.zsh
         INSTALL_DIR=${GITHUB_WORKSPACE} bash ${GITHUB_WORKSPACE}/install.sh
