--- a/.github/workflows/macos-intel.yaml
+++ b/.github/workflows/macos-intel.yaml
@@ -1,20 +1,23 @@
 name: macos
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
+  # push:
+  #   branches: [ main ]
+  # pull_request:
+  #   branches: [ main ]
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: macos-12
 
     steps:
     - uses: actions/checkout@v4
     - uses: cachix/install-nix-action@v26
     - name: Run install.sh
       run: |
+        sudo mv /etc/shells /etc/shells.bak
+        sudo mv /etc/nix/nix.conf /etc/nix/nix.conf.bak
         mkdir -p ${GITHUB_WORKSPACE}/results
         echo -e "DEV_ENV=y\nGUI_ENV=y" > ${GITHUB_WORKSPACE}/results/env_settings
         echo "GITHUB_ACTIONS=y" >> ${GITHUB_WORKSPACE}/files/zsh/zshenv.zsh
